[pycodestyle]
quiet = 1
ignore = E231,W503


[precommit]
python_files = *
    blackjack/*
    tests/*
rst_files = *
unit_tests = tests


[metadata]
name = blackjack
version = 0.0.2-dev
author = Paul J. Iutzi
author_email = pji@mac.com
description = Yet another Python implementation of blackjack.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pji/blackjack
project_urls =
    Bug Tracker = https://github.com/pji/blackjack/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
