[pycodestyle]
quiet = 1
ignore = E231,W503


[precommit]
python_files = *
    blackjack/*
    tests/*
rst_files = *
unit_tests = tests


[metadata]
name = blackjack
version = 0.1.0
author = Paul J. Iutzi
author_email = pji@mac.com
description = Yet another Python implementation of blackjack.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pji/blackjack
project_urls =
    Bug Tracker = https://github.com/pji/blackjack/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
package_dir =
    = .
packages = find:
python_requires = >= 3.10
install_requires = mkname
    blessed


[options.entry_points]
console_scripts =
    blackjack = blackjack.cli:main


[options.package_data]
blackjack = data/rules.man


[tox:tox]
envlist = py310, py311


[testenv]
allowlist_externals = isort
commands =
    pytest {posargs: tests}
    isort ./blackjack --check-only --diff --skip .tox --lai 2 -m 3
    isort ./tests --check-only --diff --skip .tox --lai 2 -m 3
deps = -rrequirements.txt
    pytest
    pytest-mock
